Término html baby colors

--- a/babyColorsMasc.html
+++ b/babyColorsMasc.html
@@ -31,165 +31,87 @@
 
     <main>
         <section id="meiasBabyDesMasc">
-            <h1 class="titulo">Baby Desenhada Masculina </h1>
+            <h1 class="titulo">Baby Colors Masculina </h1>
             <div class="todas-as-meias-baby-des-masc">
-                <div class="Quadrado-da-meia-elefante" id="div-meia">
-                    <div class="container"> <img src="img-baby/babyElefanteVerde.png" alt="Meia de Elefante">
+                <div class="Quadrado-da-meia-colors1" id="div-meia">
+                    <div class="container"> <img src="img-baby/colors1Branca.png" alt="Meia">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Elefante Verde Masculina</h3>
+                        <h3 class="Subtitulo">Meia Baby Colors Masculina</h3>
                         <h3 class="numeracao">0 á 6 meses</h3>
-                        <div class="cores-verde-offwhite">
-                            <div class="verde"></div>
-                            <div class="offwhite"></div>
+                        <div class="cores-branca-verde-colors">
+                            <div class="brancaC"></div>
+                            <div class="azulC"></div>
+                            <div class="cinzaC"></div>
+                            <div class="marinhoC"></div>
+                            <div class="verdeC"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,70</h3>
+                        <h3 class="preco">R$ 3,65</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-quadrados" id="div-meia">
-                    <div class="container"> <img src="img-baby/quadradosCinza.png" alt="Meia de Quadrados">
+                <div class="Quadrado-da-meia-colors2" id="div-meia">
+                    <div class="container"> <img src="img-baby/colors2Azul.png" alt="Meia">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Quadrados Cinza Masculina</h3>
+                        <h3 class="Subtitulo">Meia Baby Colors Masculina</h3>
+                        <h3 class="numeracao">6 á 12 meses</h3>
+                        <div class="cores-branca-verde-colors2">
+                            <div class="brancaC2"></div>
+                            <div class="azulC2"></div>
+                            <div class="cinzaC2"></div>
+                            <div class="marinhoC2"></div>
+                            <div class="verdeC2"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 3,75</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+                <div class="Quadrado-da-meia-kitcolors1" id="div-meia">
+                    <div class="container"> <img src="img-baby/kitN1-1.png" alt="Meia">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Baby Colors Masculina - Kit 3 Pares</h3>
                         <h3 class="numeracao">0 á 6 meses</h3>
-                        <div class="cores-branca-cinza">
-                            <div class="cinza"></div>
-                            <div class="branca"></div>
-
+                        <div class="cores-kit-colors-masc">
+                            <div class="kit1Colors1"><p>1</p></div>
+                            <div class="kit2Colors1"><p>2</p></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,70</h3>
+                        <h3 class="preco">R$ 10,95</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-astronauta" id="div-meia">
-                    <div class="container"> <img src="img-baby/astronautaAzul.png" alt="Meia astronauta">
+                <div class="Quadrado-da-meia-kitcolors2" id="div-meia">
+                    <div class="container"> <img src="img-baby/kitN1-2.png" alt="Meia">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Astronauta Azul Masculina</h3>
-                        <h3 class="numeracao">0 á 6 meses</h3>
-                        <div class="cores-azul-marinho">
-                            <div class="azul"></div>
-                            <div class="marinho"></div>
-
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,70</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-                <div class="Quadrado-da-meia-triangulo" id="div-meia">
-                    <div class="container"> <img src="img-baby/trianguloMarrom.png" alt="Meia triângulo">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Triângulo Marrom Masculina</h3>
+                        <h3 class="Subtitulo">Meia Baby Colors Masculina - Kit 3 Pares</h3>
                         <h3 class="numeracao">6 á 12 meses</h3>
-                        <div class="cores-marrom-azul">
-                            <div class="marrom"></div>
-                            <div class="azulTriangulo"></div>
-
+                        <div class="cores-kit-colors-masc2">
+                            <div class="kit1Colors2"><p>1</p></div>
+                            <div class="kit2Colors2"><p>2</p></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,80</h3>
+                        <h3 class="preco">R$ 11,25</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-marinheiro" id="div-meia">
-                    <div class="container"> <img src="img-baby/marinheiroVermelho.png" alt="Meia marinheiro">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Marinheiro Vermelho Masculina</h3>
-                        <h3 class="numeracao">6 á 12 meses</h3>
-                        <div class="cores-vermelho-amarelo">
-                            <div class="vermelho"></div>
-                            <div class="amarelo"></div>
-
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,80</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-                <div class="Quadrado-da-meia-leao" id="div-meia">
-                    <div class="container"> <img src="img-baby/leaoAzul-turquesa.png" alt="Meia leão">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Leão Azul Turquesa Masculina</h3>
-                        <h3 class="numeracao">6 á 12 meses</h3>
-                        <div class="cores-azulTurquesa-cinza">
-                            <div class="azulTurquesa"></div>
-                            <div class="cinzaMescla"></div>
-
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 3,80</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-                <div class="Quadrado-da-meia-kit1-0a6" id="div-meia">
-                    <div class="container"> <img src="img-baby/kit1-desenhada0a6.png" alt="Kit 3 pares de meia">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Kids Desenhada Masculina - Kit 3 Pares</h3>
-                        <h3 class="numeracao">0 á 6 meses</h3>
-                        <div class="cores-kit-des-0a6">
-                            <div class="kit1Des0a6">
-                                <p>1</p>
-                            </div>
-                            <div class="kit2Des0a6">
-                                <p>2</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,10</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
-
-
-                <div class="Quadrado-da-meia-kit1-6a12" id="div-meia">
-                    <div class="container"> <img src="img-baby/kit1-desenhada6a12.png" alt="Kit 3 pares de meia">
-                    </div>
-                    <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Kids Desenhada Masculina - Kit 3 Pares</h3>
-                        <h3 class="numeracao">6 á 12 meses</h3>
-                        <div class="cores-kit-des-0a6">
-                            <div class="kit1Des6a12">
-                                <p>1</p>
-                            </div>
-                            <div class="kit2Des6a12">
-                                <p>2</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,40</h3>
-                        <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
-                    </div>
-                </div>
+                
             </div>
         </section>
     </main>
@@ -309,6 +231,28 @@
                 kit1Des6a12: 'img-baby/kit1-desenhada6a12.png',
                 kit2Des6a12: 'img-baby/kit2-desenhada6a12.png'
             },
+            'Quadrado-da-meia-colors1': {
+                brancaC: 'img-baby/colors1Branca.png',
+                azulC: 'img-baby/colors1Azul.png',
+                cinzaC: 'img-baby/colors1Cinza.png',
+                marinhoC: 'img-baby/colors1Marinho.png',
+                verdeC: 'img-baby/colors1Verde.png'
+            },
+            'Quadrado-da-meia-colors2': {
+                brancaC2: 'img-baby/colors2Branca.png',
+                azulC2: 'img-baby/colors2Azul.png',
+                cinzaC2: 'img-baby/colors2Cinza.png',
+                marinhoC2: 'img-baby/colors2Marinho.png',
+                verdeC2: 'img-baby/colors2Verde.png'
+            },
+            'Quadrado-da-meia-kitcolors1': {
+                kit1Colors1: 'img-baby/kitN1-1.png',
+                kit2Colors1: 'img-baby/kitN2-1.png'
+            },
+            'Quadrado-da-meia-kitcolors2': {
+                kit1Colors2: 'img-baby/kitN1-2.png',
+                kit2Colors2: 'img-baby/kitN2-2.png'
+            }
         };
 
         document.querySelectorAll('.todas-as-meias-baby-des-masc > div').forEach((quadrado) => {
@@ -316,7 +260,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.verde, .offwhite, .cinza, .branca, .azul, .marinho, .marrom, .azulTriangulo, .vermelho, .amarelo, .azulTurquesa, .cinzaMescla, .kit1Des0a6, .kit2Des0a6, .kit1Des6a12, .kit2Des6a12');
+            const cores = quadrado.querySelectorAll('.brancaC, .azulC, .verdeC, .marinhoC, .cinzaC, .brancaC2, .azulC2, .verdeC2, .marinhoC2, .cinzaC2, .kit1Colors1, .kit2Colors1, .kit1Colors2, .kit2Colors2');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
