--- a/babyDesMasc.html
+++ b/babyDesMasc.html
@@ -37,7 +37,7 @@
                     <div class="container"> <img src="img-baby/babyElefanteVerde.png" alt="Meia de Elefante">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Elefante Verde Masculina</h3>
+                        <h3 class="Subtitulo">Meia Baby Desenhada Elefante Masculina</h3>
                         <h3 class="numeracao">0 á 6 meses</h3>
                         <div class="cores-verde-offwhite">
                             <div class="verde"></div>
@@ -55,7 +55,7 @@
                     <div class="container"> <img src="img-baby/quadradosCinza.png" alt="Meia de Quadrados">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Quadrados Cinza Masculina</h3>
+                        <h3 class="Subtitulo">Meia Baby Desenhada Quadrados Masculina</h3>
                         <h3 class="numeracao">0 á 6 meses</h3>
                         <div class="cores-branca-cinza">
                             <div class="cinza"></div>
@@ -74,7 +74,7 @@
                     <div class="container"> <img src="img-baby/astronautaAzul.png" alt="Meia astronauta">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Astronauta Azul Masculina</h3>
+                        <h3 class="Subtitulo">Meia Baby Desenhada Astronauta Masculina</h3>
                         <h3 class="numeracao">0 á 6 meses</h3>
                         <div class="cores-azul-marinho">
                             <div class="azul"></div>
@@ -93,7 +93,7 @@
                     <div class="container"> <img src="img-baby/trianguloMarrom.png" alt="Meia triângulo">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Triângulo Marrom Masculina</h3>
+                        <h3 class="Subtitulo">Meia Baby Desenhada Triângulo Masculina</h3>
                         <h3 class="numeracao">6 á 12 meses</h3>
                         <div class="cores-marrom-azul">
                             <div class="marrom"></div>
@@ -112,7 +112,7 @@
                     <div class="container"> <img src="img-baby/marinheiroVermelho.png" alt="Meia marinheiro">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Marinheiro Vermelho Masculina</h3>
+                        <h3 class="Subtitulo">Meia Baby Desenhada Marinheiro Masculina</h3>
                         <h3 class="numeracao">6 á 12 meses</h3>
                         <div class="cores-vermelho-amarelo">
                             <div class="vermelho"></div>
@@ -131,7 +131,7 @@
                     <div class="container"> <img src="img-baby/leaoAzul-turquesa.png" alt="Meia leão">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Baby Desenhada Leão Azul Turquesa Masculina</h3>
+                        <h3 class="Subtitulo">Meia Baby Desenhada Leão Masculina</h3>
                         <h3 class="numeracao">6 á 12 meses</h3>
                         <div class="cores-azulTurquesa-cinza">
                             <div class="azulTurquesa"></div>
