--- a/kidsMas.html
+++ b/kidsMas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meias Sene</title>
-    <link rel="stylesheet" href="kidsfem.css">
+    <link rel="stylesheet" href="kidsmas.css">
 </head>
 
 <body>
@@ -31,18 +31,18 @@
     <main>
 
         <section id="meiasKidsFemino">
-            <h1 class="titulo">Kids Femino</h1>
+            <h1 class="titulo">Kids Masculino</h1>
             <h2 class="subtitulo">Kids P</h2>
-            <div class="todas-as-meias-feminina-kids">
-                <!--MEIAS KIDS FEMININA P-->
-                <div class="Quadrado-da-meia-cachorrinho" id="div-meia-kids-femino">
-                    <div class="container"> <img src="img-kids-feminino/Cachorrinho-Verde.png" alt=""></div>
+            <div class="todas-as-meias-masculinas-kids">
+                <!--MEIAS KIDS MAasculino P-->
+                <div class="Quadrado-da-meia-raposa" id="div-meia-kids-masculino">
+                    <div class="container"> <img src="img-kids-masculina/Raposa-Cinza.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Meia Kids P - Cachorrinho Verde</h3>
+                        <h3 class="KidsMasculinoSubtitulo">Meia Kids P - Raposa Cinza Masculina</h3>
                         <h3 class="numeracao"> 21 á 24</h3>
-                        <div class="cores-verde-rosa">
-                            <div class="verde"></div>
-                            <div class="rosa1"></div>
+                        <div class="cores-bege-cinza">
+                            <div class="bege"></div>
+                            <div class="cinza"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -52,10 +52,10 @@
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-joaninha" id="div-meia-kids-femino">
+                <div class="Quadrado-da-meia-joaninha" id="div-meia-kids-masculino">
                     <div class="container"> <img src="img-kids-feminino/Joaninha-Vermelha.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Meia Kids P - Joaninnha Vermelha</h3>
+                        <h3 class="KidsMasculinoSubtitulo">Meia Kids P - Joaninnha Vermelha</h3>
                         <h3 class="numeracao"> 21 á 24</h3>
                         <div class="cores-preto-vermelho">
                             <div class="preto"></div>
@@ -69,10 +69,10 @@
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-unicornio" id="div-meia-kids-femino">
+                <div class="Quadrado-da-meia-unicornio" id="div-meia-kids-masculino">
                     <div class="container"> <img src="img-kids-feminino/Unicornio-Cinza.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Meia Kids P - Unicórnio Cinza </h3>
+                        <h3 class="KidsMasculinoSubtitulo">Meia Kids P - Unicórnio Cinza </h3>
                         <h3 class="numeracao"> 21 á 24</h3>
                         <div class="cores-cinza-rosa2">
                             <div class="cinza"></div>
@@ -86,10 +86,10 @@
                     </div>
                 </div>
 
-                <div class="KitP-meias" id="div-meia-kids-femino">
+                <div class="KitP-meias" id="div-meia-kids-masculino">
                     <div class="container"> <img src="img-kids-feminino/kitP-numero-um.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Meias Kids P Feminina - Kit com 3 pares
+                        <h3 class="KidsMasculinoSubtitulo">Meias Kids P Feminina - Kit com 3 pares
                         </h3>
                         <h3 class="numeracao"> 29 á 32</h3>
                         <div class="cores-kit-feminino">
@@ -115,11 +115,11 @@
                 <h2 class="subtitulo-m">Kids M</h2>
             </div>
             <!-- Meia Pinguim-->
-            <div class="todas-as-meias-feminina-kids">
-                <div class="Quadrado-da-meia-pinguim" id="div-meia-kids-femino">
+            <div class="todas-as-meias-masculinas-kids">
+                <div class="Quadrado-da-meia-pinguim" id="div-meia-kids-masculino">
                     <div class="container"> <img src="img-kids-feminino/Pinguim-Pink.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Meia Kids M Feminina - Pinguim Pink
+                        <h3 class="KidsMasculinoSubtitulo">Meia Kids M Feminina - Pinguim Pink
                         </h3>
                         <h3 class="numeracao"> 25 á 28</h3>
                         <div class="cores-branca-rosa3">
@@ -136,10 +136,10 @@
                 <!--Fim Meia Pinguim-->
 
                 <!--Meia Motoqueira-->
-                <div class="Quadrado-da-meia-motoqueira" id="div-meia-kids-femino">
+                <div class="Quadrado-da-meia-motoqueira" id="div-meia-kids-masculino">
                     <div class="container"> <img src="img-kids-feminino/Motoqueira-Lilas.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Meia Kids M - Motoqueira Lilás
+                        <h3 class="KidsMasculinoSubtitulo">Meia Kids M - Motoqueira Lilás
 
                         </h3>
                         <h3 class="numeracao"> 25 á 28</h3>
@@ -158,10 +158,10 @@
 
 
                 <!--Meia Coração-->
-                <div class="Quadrado-da-meia-coracao" id="div-meia-kids-femino">
+                <div class="Quadrado-da-meia-coracao" id="div-meia-kids-masculino">
                     <div class="container"> <img src="img-kids-feminino/Coração-Cinza.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo"> Meia Kids M - Coração Cinza
+                        <h3 class="KidsMasculinoSubtitulo"> Meia Kids M - Coração Cinza
 
                         </h3>
                         <h3 class="numeracao"> 25 á 28</h3>
@@ -179,10 +179,10 @@
                 <!-- FIM Meia Coração-->
 
                 <!--KIT M N°1-->
-                <div class="KitM-meias" id="div-meia-kids-femino">
+                <div class="KitM-meias" id="div-meia-kids-masculino">
                     <div class="container"> <img src="img-kids-feminino/kitM-numero-um.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Meias Kids M Feminina - Kit com 3 pares
+                        <h3 class="KidsMasculinoSubtitulo">Meias Kids M Feminina - Kit com 3 pares
                         </h3>
                         <h3 class="numeracao"> 29 á 32</h3>
                         <div class="cores-kit-feminino">
@@ -215,11 +215,11 @@
                 <h2 class="subtitulo-m">Kids G</h2>
             </div>
             <!-- Meia Keep-->
-            <div class="todas-as-meias-feminina-kids">
-                <div class="Quadrado-da-meia-keep" id="div-meia-kids-femino">
+            <div class="todas-as-meias-masculinas-kids">
+                <div class="Quadrado-da-meia-keep" id="div-meia-kids-masculino">
                     <div class="container"> <img src="img-kids-feminino/Keep-Calm-Cinza.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo"> Meais Kids G - Keep Calm Cinza
+                        <h3 class="KidsMasculinoSubtitulo"> Meais Kids G - Keep Calm Cinza
                         </h3>
                         <h3 class="numeracao"> 29 á 32</h3>
                         <div class="cores-branca2-cinza3">
@@ -235,10 +235,10 @@
                 </div>
                 <!--Fim Meia Keep-->
                 <!-- Meia Panda-->
-                <div class="Quadrado-da-meia-panda" id="div-meia-kids-femino">
+                <div class="Quadrado-da-meia-panda" id="div-meia-kids-masculino">
                     <div class="container"> <img src="img-kids-feminino/Panda-Rosa.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo"> Meais Kids G - Panda Rosa
+                        <h3 class="KidsMasculinoSubtitulo"> Meais Kids G - Panda Rosa
                         </h3>
                         <h3 class="numeracao"> 29 á 32</h3>
                         <div class="cores-verde2-rosa6">
@@ -254,10 +254,10 @@
                 </div>
                 <!--Fim Meia Panda-->
                 <!--Meia Maquiagem-->
-                <div class="Quadrado-da-meia-maquiagem" id="div-meia-kids-femino">
+                <div class="Quadrado-da-meia-maquiagem" id="div-meia-kids-masculino">
                     <div class="container"> <img src="img-kids-feminino/Maquiagem-Rosa.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Meias Kids G - Maquiagem Rosa
+                        <h3 class="KidsMasculinoSubtitulo">Meias Kids G - Maquiagem Rosa
                         </h3>
                         <h3 class="numeracao"> 29 á 32</h3>
                         <div class="cores-rosa7-lilas2">
@@ -273,10 +273,10 @@
                 </div>
                 <!--Fim Maquiagem-->
 
-                <div class="KitG-meias" id="div-meia-kids-femino">
+                <div class="KitG-meias" id="div-meia-kids-masculino">
                     <div class="container"> <img src="img-kids-feminino/kitG-numero-um.png" alt=""></div>
                     <div class="informacoes-meia-kids-femino">
-                        <h3 class="KidsFeminoSubtitulo">Meias Kids G Feminina - Kit com 3 pares
+                        <h3 class="KidsMasculinoSubtitulo">Meias Kids G Feminina - Kit com 3 pares
                         </h3>
                         <h3 class="numeracao"> 29 á 32</h3>
                         <div class="cores-kit-feminino">
@@ -391,9 +391,9 @@
 
     <script>
         const imagensPorCor = {
-            'Quadrado-da-meia-cachorrinho': {
-                verde: 'img-kids-feminino/Cachorrinho-Verde.png',
-                rosa1: 'img-kids-feminino/Cachorrinho-Rosa.png',
+            'Quadrado-da-meia-raposa': {
+                bege: 'img-kids-masculina/Raposa-Bege.png',
+                cinza: 'img-kids-feminino/Raposa-Cinza.png',
             },
             'Quadrado-da-meia-joaninha': {
                 preto: 'img-kids-feminino/Joaninha-Preta.png',
@@ -443,13 +443,13 @@
 
         };
 
-        // Para cada quadrado de meia na seção "todas-as-meias-feminina-kids"
-        document.querySelectorAll('.todas-as-meias-feminina-kids > div').forEach((quadrado) => {
+        // Para cada quadrado de meia na seção "todas-as-meias-masculinas-kids"
+        document.querySelectorAll('.todas-as-meias-masculinas-kids > div').forEach((quadrado) => {
             // Seleciona a imagem da meia dentro do quadrado atual
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.verde, .rosa1, .vermelho, .preto, .cinza, .rosa2, .rosa3, .rosa4, .lilas, .branca, .branca2, .cinza3, .cinza2, .rosa5, .verde2, .rosa6, .rosa7, .lilas2, .kitGmeias1, .kitGmeias2, .kitMmeias2, .kitMmeias1, .kitPmeias1, .kitPmeias2');
+            const cores = quadrado.querySelectorAll('.bege, .cinza');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -491,7 +491,7 @@
                 const corSelecionada = selectedColor;
 
                 if (corSelecionada) {
-                    window.location.href = `descricaoKids/descricaoKidsFem.html?cor=${corSelecionada}`;
+                    window.location.href = `descricaoKids/descricaoKidsMas.html?cor=${corSelecionada}`;
                 } else {
                     alert('Por favor, selecione uma cor.');
                 }
@@ -499,10 +499,10 @@
 
         });
 
-        document.querySelectorAll('.cores-verde-rosa div, .cores-preto-vermelho div, .cores-cinza-rosa2 div, .cores-branca-rosa3 div,.cores-lilas-rosa4 div, .cores-cinza2-rosa5 div, .cores-verde2-rosa6 div, .cores-branca2-cinza3 div, .cores-rosa7-lilas2 div,.cores-kit-feminino div').forEach(cor => {
+        document.querySelectorAll('cores-bege-cinza div, ').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cores-verde-rosa div, .cores-preto-vermelho div, .cores-cinza-rosa2 div, .cores-branca-rosa3 div,.cores-lilas-rosa4 div, .cores-cinza2-rosa5 div, .cores-verde2-rosa6 div, .cores-branca2-cinza3 div, .cores-rosa7-lilas2 div,.cores-kit-feminino div').forEach(c => {
+                document.querySelectorAll('cores-bege-cinza div, ').forEach(c => {
                     c.classList.remove('selected');
                 });
 
