--- a/CanoLongoFem.html
+++ b/CanoLongoFem.html
@@ -93,7 +93,7 @@
 
                 <div class="Quadrado-da-meia-melancia-cano-longo" id="div-meia-cano-curto">
                     <!-- Quadrado-da-meia-verde-cano-curto -->
-                    <div class="container"> <img src="img-feminino/MeiaCanoLongoCasual-Meancia.png" alt=""></div>
+                    <div class="container"> <img src="img-feminino/MeiaCanoLongoCasual-Melancia.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
                         <h3 class="CanoCurtoSubtitulo"> Casual Cano Longo Feminina - Melancia</h3>
                         <h3 class="numeracao"> 34 á 38</h3>
@@ -237,17 +237,6 @@
 
 
     <script>
-
-
-
-
-
-
-
-
-
-
-
         const imagensPorCor = {
             'Quadrado-da-meia-abelha-cano-longo ': {
                 abelha: 'img-feminino/MeiaCanoLongoCasual-Abelha.png',
@@ -329,10 +318,10 @@
         });
 
 
-        document.querySelectorAll('.cor-da-meia-caveira, .cor-da-meia-abelha , .cor-da-meia-ArcoIri, .cor-da-meia-cacto, .cor-da-meia-vaquinha, .cor-da-meiamelancia div').forEach(cor => {
+        document.querySelectorAll('.cor-da-meia-caveira div, .cor-da-meia-abelha div, .cor-da-meia-ArcoIris div, .cor-da-meia-cacto div, .cor-da-meia-vaquinha div, .cor-da-meiamelancia div').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cor-da-meia-caveira, .cor-da-meia-abelha ,.cor-da-meia-ArcoIri, .cor-da-meia-cacto , .cor-da-meia-vaquinha, .cor-da-meiamelancia div div').forEach(c => {
+                document.querySelectorAll('.cor-da-meia-caveira div, .cor-da-meia-abelha div, .cor-da-meia-ArcoIri div, .cor-da-meia-cacto div, .cor-da-meia-vaquinha div, .cor-da-meiamelancia div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
