--- a/proFeminino.html
+++ b/proFeminino.html
@@ -30,19 +30,19 @@
     </header>
     <main>
         <section id="meiasCanoCurto">
-            <h1 class="titulo">Casual Feminina Cano Longo </h1>
+            <h1 class="titulo">Pró Feminina </h1>
             <div class="todas-as-meias-feminina-cano-curto">
-                <div class="Quadrado-da-meia-abelha-cano-longo" id="div-meia-cano-curto">
-                    <div class="container"> <img src="img-feminino/MeiaCanoLongoCasual-Abelha.png" alt=""></div>
+                <div class="Quadrado-da-meia-pro-listrada-BrancaAzulEscuro" id="div-meia-cano-curto">
+                    <div class="container"> <img src="img-feminino/MeiaProListrada-BrancaAzulEscuro.png" alt=""></div>
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Casual Cano Longo Feminina - Abelha</h3>
-                        <h3 class="numeracao"> 34 á 38</h3>
+                        <h3 class="CanoCurtoSubtitulo"> Meia Pró Feminina - Diagonal Roxo</h3>
+                        <h3 class="numeracao"> 34 á 39</h3>
                         <div class="cor-da-meia-abelha">
                             <div class="abelha"><img src="img-feminino/CorDaMeiaCanoLongo-Abelha.png" alt=""></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$: 7,20 </h3>
+                        <h3 class="preco">R$: 11,20 </h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
@@ -50,20 +50,20 @@
 
 
 
-                <div class="Quadrado-da-meia-cacto-cano-longo" id="div-meia-cano-curto">
+                <div class="Quadrado-da-meia-pro-PretaRosa" id="div-meia-cano-curto">
                     <!-- Quadrado-do-kit-cinza-cano-curto -->
-                    <div class="container"><img class="le" src="img-feminino/MeiaCanoLongoCasual-Cacto.png" alt="">
+                    <div class="container"><img class="le" src="img-feminino/MeiaProListrada-PretaRosa.png" alt="">
                     </div>
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Casual Cano Longo Feminina - Cacto</h3>
-                        <h3 class="numeracao"> 34 á 38</h3>
+                        <h3 class="CanoCurtoSubtitulo"> Meia Pró Feminina - Diagonal Pink </h3>
+                        <h3 class="numeracao"> 34 á 39</h3>
                         <div class="cor-da-meia-cacto">
                             <div class="cacto"><img src="img-feminino/CorDaMeiaCanoLongo-Cacto.png" alt=""></div>
 
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 7,20</h3>
+                        <h3 class="preco">R$ 11,20</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
@@ -72,18 +72,18 @@
                 <div class="Quadrado-da-meia-caveira-cano-longo" id="div-meia-cano-curto">
                     <!-- Quadrado-do-kit-cinza-cano-curto -->
 
-                    <div class="container"><img class="le" src="img-feminino/MeiaCanoLongoCasual-Caveira.png" alt="">
+                    <div class="container"><img class="le" src="img-feminino/MeiaProDesenhada-PretaVerdeMUsgo.png" alt="">
                     </div>
                     <div class="informacoes-meia-cano-curto-feminino">
-                        <h3 class="CanoCurtoSubtitulo"> Casual Cano Longo Feminina - Caveirinhas</h3>
-                        <h3 class="numeracao"> 34 á 38</h3>
+                        <h3 class="CanoCurtoSubtitulo"> Meia Pró Feminina - Corrente Verde</h3>
+                        <h3 class="numeracao"> 34 á 39</h3>
                         <div class="cor-da-meia-caveira">
                             <div class="caveira"><img src="img-feminino/CorDaMeiaCanoLongo-Caveira.png" alt=""></div>
 
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 7,20</h3>
+                        <h3 class="preco">R$ 11,20</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
